Deployed the MYSQL Cloud On RailwaySQL

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
-# Database
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=crud_db
-DB_USER=root
-DB_PASSWORD=Stashfin
-
-# App
-PORT=3000
 NODE_ENV=development
+
+PORT=8080
+
+DB_HOST=shortline.proxy.rlwy.net
+DB_PORT=34188
+DB_USER=root
+DB_PASSWORD=QzPIhNUEFmplIQbYChOlmdftrvjeqYdc
+DB_NAME=railway
