--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "CRUD Operations API with Node.js + MySQL + TypeScript",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
-  },
+  "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+  "start": "ts-node src/server.ts",
+  "build": "tsc"
+}
+,
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
     "@fastify/swagger": "^8.13.0",
     "@fastify/swagger-ui": "^1.10.0",
     "dotenv": "^16.3.1",
